# The-Udder-Project

./: .mxproject  Hardware connection.txt  Harfware connection.txt  README.md  The_Udder_Project.ioc  The_Udder_Project_RTOS.ioc
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c
MDK-ARM/: .clangd  Controller.c  Controller.h  The_Udder_Project+TheUdderProject.cbuild.yml  The_Udder_Project+TheUdderProject.cprj  The_Udder_Project.cbuild-idx.yml  The_Udder_Project.cproject.yaml  The_Udder_Project.csolution.yaml  The_Udder_Project.uvguix.DeLaval Team  The_Udder_Project.uvguix.XJTan  The_Udder_Project.uvoptx  The_Udder_Project.uvprojx  The_Udder_Project_RTOS.uvguix.XJTan  The_Udder_Project_RTOS.uvoptx  The_Udder_Project_RTOS.uvprojx
MDK-ARM/Include/: application.h  controller.h  peripherals.h
MDK-ARM/RTE/CMSIS/: RTX_Conf_CM.c
MDK-ARM/RTE/Device/: project.script
MDK-ARM/RTE/Device/STM32L476RGTx/: FrameworkCubeMX.gpdsc  MX_Device.h
MDK-ARM/RTE/Device/STM32L476RGTx/STCubeGenerated/: .mxproject  STCubeGenerated.ioc
MDK-ARM/RTE/Device/STM32L476RGTx/STCubeGenerated/MDK-ARM/: STCubeGenerated.uvguix.XJTan  STCubeGenerated.uvoptx  STCubeGenerated.uvprojx
MDK-ARM/RTE/_TheUdderProject/: RTE_Components.h
MDK-ARM/RTE/_The_Udder_Project/: RTE_Components.h
MDK-ARM/RTE/_The_Udder_Project_RTOS/: Pre_Include_Global.h  RTE_Components.h
MDK-ARM/Source/: application.c  controller.c  peripherals.c
MDK-ARM/The_Udder_Project/: Controller.c  Controller.h  The_Udder_Project.axf  The_Udder_Project.build_log.htm  The_Udder_Project.hex  The_Udder_Project.htm  The_Udder_Project.lnp  The_Udder_Project.map  The_Udder_Project_The_Udder_Project.dep  adc.d  controller.d  gpio.d  main.d  peripherals.d  stm32l4xx_hal.d  stm32l4xx_hal_adc.d  stm32l4xx_hal_adc_ex.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_msp.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  stm32l4xx_hal_tim.d  stm32l4xx_hal_tim_ex.d  stm32l4xx_hal_uart.d  stm32l4xx_hal_uart_ex.d  stm32l4xx_it.d  system_stm32l4xx.d  tim.d  usart.d
MDK-ARM/The_Udder_Project_RTOS/: The_Udder_Project_RTOS.build_log.htm  The_Udder_Project_RTOS.lnp  The_Udder_Project_RTOS_The_Udder_Project_RTOS.dep  adc.d  application.d  controller.d  gpio.d  main.d  peripherals.d  rtx_conf_cm.d  stm32l4xx_hal.d  stm32l4xx_hal_adc.d  stm32l4xx_hal_adc_ex.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_msp.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  stm32l4xx_hal_tim.d  stm32l4xx_hal_tim_ex.d  stm32l4xx_it.d  system_stm32l4xx.d  system_stm32l4xx_1.d  tim.d
MDK-ARM/tmp/The_Udder_Project/TheUdderProject/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
